feat(public): get documents by status endpoint (#70)
